# metaquest-3d-reconstruction

./: .gitignore  README.md  pyproject.toml
config/: pipeline_config.yml  pipeline_config_stereo.yml
docs/: API.md  CLI.md  DATA_FORMAT.md  INSTALLATION.md  MODELS.md  PIPELINES.md  USAGE.md
examples/: run_foundation_stereo_pipeline.sh  run_mq3drecon_pipeline.sh
scripts/: _bootstrap.py  build_colmap_project.py  convert_depth_to_linear_map.py  convert_yuv_to_rgb.py  reconstruct_scene.py  visualize_camera_trajectories.py
specs/: CLI_BEHAVIOR.md  COMMON_RULES.md  DATASETS_AND_CACHE.md  INDEX.md  LEGACY_BEHAVIOR.md  LOGGING_AND_ERRORS.md  PACKAGING.md  PROJECT_LAYOUT.md  PUBLIC_API.md  RECONSTRUCTION_CONFIG.md  RECORDING_FORMATS.md  STEREO_DEPTH.md
tests/: conftest.py  test_color_aligned_depth_png.py  test_color_aligned_depth_source.py  test_conversion_config_defaults.py  test_dataset_validation.py  test_example_pipeline_configs.py  test_example_scripts.py  test_foundation_stereo_workflow.py  test_legacy_cli_shims.py  test_legacy_config_utils_wrappers.py  test_legacy_import_wrappers.py  test_legacy_processing_pipeline_wrappers.py  test_load_rgb_legacy_fallback.py  test_logging_and_errors.py  test_mesh_extraction.py  test_migration_structure.py  test_mruk_colmap_export.py  test_mruk_color_dataset.py  test_open3d_adapter.py  test_package_cli.py  test_packaging_metadata.py  test_project_layouts.py  test_public_api_imports.py  test_reconstruction_config.py  test_reconstruction_workflow_api.py  test_recording_format_detection.py  test_rgb_image_status.py  (+2 more)
(+129 files in other folders)
