[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mq3drecon"
version = "0.1.0"
description = "Meta Quest 3D reconstruction toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

[tool.setuptools.packages.find]
where = ["src"]
